--- a/views/userAddToCart.ejs
+++ b/views/userAddToCart.ejs
@@ -1,4 +1,4 @@
-                  <!DOCTYPE html>
+<!--                   <!DOCTYPE html>
                   <html>
 
                   <head>
@@ -53,14 +53,14 @@
                                     <td><%=data[i].productPrice %></td>
                                     <td> <a button class="btn btn-danger" href="/user/products">Cancel</a></td>
                                     <!-- <td> <a button class="btn btn-primary" href="/user/products/confirm/<%=data[i].product_id%>">Confirm Order</a></td> -->
-                                 </tr>
+                              <!--    </tr>
                                  <%}%>
                               </table>
                               <hr>
                               <hr>
                              
                                  <div class="control-group">
-                                    <!-- Quantity -->
+                               
                                    
                                           <input type="number" name="quantity" min="1" required>
 
@@ -83,4 +83,161 @@
                         src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
                      <script
                         src="https://maxcdn.bootstrapcdn.com/bootstrap/2.3.2/js/bootstrap.min.js"></script>
-                  </html>
+                  </html> --> 
+
+
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>Single Product </title>
+    <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/bootstrap/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/bootstrap/css/prettyPhoto.css" rel="stylesheet">
+    <link href="/bootstrap/css/price-range.css" rel="stylesheet">
+    <link href="/bootstrap/css/animate.css" rel="stylesheet">
+  <link href="/bootstrap/css/main.css" rel="stylesheet">
+  <link href="/bootstrap/css/responsive.css" rel="stylesheet">
+    <!--[if lt IE 9]>
+    <script src="js/html5shiv.js"></script>
+    <script src="js/respond.min.js"></script>
+    <![endif]-->       
+    <link rel="shortcut icon" href="images/ico/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+</head><!--/head-->
+
+<body>
+  <header id="header"><!--header-->
+    <div class="header_top"><!--header_top-->
+      <div class="container">
+
+          <div class="col-sm-6">
+            <div class="social-icons pull-right">
+              
+            </div>
+          </div>
+        </div>
+      </div>
+    </div><!--/header_top-->
+    
+    <div class="header-middle"><!--header-middle-->
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="logo pull-left">
+              <a href="#"><img src="/images/logo.png" alt="" /></a>
+            </div>
+            <div class="btn-group pull-right">
+              <div class="btn-group">
+
+              </div>
+              
+              <div class="btn-group">
+                
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-8">
+            <div class="shop-menu pull-right">
+              <ul class="nav navbar-nav">
+                <li><a href="#"><i class="fa fa-user"></i> <%=sess.firstname%>&nbsp;<%=sess.lastname%></a></li>
+                <li><a href="/user/home"><i class="fa fa-star"></i> Home</a></li>
+                <li><a href="/user/products"><i class="fa fa-crosshairs"></i> Products</a></li>
+                <li><a href="/user/view/orders"><i class="fa fa-shopping-cart"></i> Orders</a></li>
+                <li><a href="/logout"><i class="fa fa-lock"></i> Logout</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div><!--/header-middle-->
+  
+    
+        
+        </div>
+      </div>
+    </div><!--/header-bottom-->
+  </header><!--/header-->
+  
+  <section>
+    
+        
+        <div class="col-sm-9 padding-right">
+          <!-- <div class="product-details"> --><!--product-details-->
+            <div class="col-sm-5">
+              <div class="view-product">
+<!--                 <img src="http://i0.wp.com/freekaamaal.com/wp-content/uploads/Yepme-Casual-Olive-Shoes.jpg?resize=279%2C271" alt="" />
+ -->                
+              </div>
+              
+
+            </div>
+             
+
+            <form action="/user/confirmQuantity/<%=productID%>/<%=productQuantity%>/<%=productPrice%>" method="POST">
+            <div class="col-sm-7">
+              <div class="product-information"><!--/product-information-->
+                <img src="/images/new.jpg" class="newarrival" alt="" />
+
+                <%
+                                    for(var i=0;i<data.length;i++){
+                                    
+                                    %>
+                                    <%i+1 %>
+
+                
+               
+                <img src="<%=data[i].image%>" width=50% height=50% alt= "<%=data[i].productName%>" alt=""/>
+                <span>
+                  <span>US $ <b> <%=data[i].productPrice %></span>
+                  <label>Quantity:</label>
+                  
+                  <input type="number" name="quantity" min="1" required>
+
+                                       
+                                   
+                                    <button input type="submit" class="btn btn-primary">Add to Cart</button>
+                </span>
+                <h2><p><%=data[i].productName %></p></h2>
+                <p><b>Product Quantity : <%=data[i].productQuantity %></b> In Stock</p>
+              
+                
+              </div><!--/product-information-->
+            </div>
+          </div><!--/product-details-->
+                                           <%}%>
+
+          </form>
+          <div class="category-tab shop-details-tab"><!--category-tab-->
+            
+            
+              
+              <div class="tab-pane fade active in" id="reviews" >
+                <div class="col-sm-12">
+                  
+                  
+
+          
+          
+  
+
+  
+    <script src="/bootstrap/js/jquery.js"></script>
+  <script src="/bootstrap/js/price-range.js"></script>
+    <script src="/bootstrap/js/jquery.scrollUp.min.js"></script>
+  <script src="/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/bootstrap/js/jquery.prettyPhoto.js"></script>
+    <script src="/bootstrap/js/main.js"></script>
+</body>
+</html>
