--- a/views/userConfirmedOrder.ejs
+++ b/views/userConfirmedOrder.ejs
@@ -1,4 +1,4 @@
-                <!DOCTYPE html>
+<!--                 <!DOCTYPE html>
                 <html>
 
                 <head>
@@ -82,4 +82,252 @@
                     src="https://maxcdn.bootstrapcdn.com/bootstrap/2.3.2/js/bootstrap.min.js"></script>
 
 
-                </html>
+                </html> -->
+
+
+
+
+
+
+
+
+
+                                        <!--                   <!DOCTYPE html>
+                  <html>
+
+                  <head>
+                      <title>Products</title>
+                      <link href="/../style.css" rel="stylesheet">
+                      <script src="/../js/all.js" type="text/javascript"></script>
+                  </head>
+
+                  <body>
+                      <h2 align="center">Add To Cart</h2>
+                      <span class="login">
+                           <h4>Welcome To view Products:  </h4>
+                           <strong>
+                           <h1><%=sess.firstname%>&nbsp;<%=sess.lastname%></h1>
+                           <strong>
+                        </span>
+                      <div class="page-container">
+                          <div class="page-data" align="center">
+                              <div class="data-btn" align="center"></div>
+                              <a button class="btn btn-primary" href="/user/home">Home</a><span>
+                              <a button class = "btn btn-warning" href="/user/products">View Products</a><span>
+                              <a button class = "btn btn-info" href="/user/view/orders">View Orders</a><span>
+                              <hr>
+                              <ul>
+                                 <li>
+                                    <a href="/logout" role="button" class=""> Logout</a>
+                                 </li>
+                              </ul>
+
+                               <form action="/user/confirmQuantity/<%=productID%>/<%=productQuantity%>/<%=productPrice%>" method="POST">
+                              <table border="1" cellpadding="1" cellspacing="10" align="center" style=   "width: 100%">
+                                 <tr>
+                                    <th width="50px">No</th>
+                                    <th>Name</th>
+                                    <th>Image</th>
+                                    <th>Quantity Available</th>
+                                    <th>Price </th>
+
+                                    <th> Cancel Order</th>
+                                 </tr>
+                                 <%
+                                    for(var i=0;i<data.length;i++){
+                                    
+                                    %>
+                                 <tr align="center">
+                                    <td width="50px"> <%=i+1 %></td>
+                                    <td><%=data[i].productName %></td>
+                          
+                          <th>  <img src="<%=data[i].image%>" alt= "<%=data[i].productName%>" width="350", height="50"/></th>
+
+                                    <td><%=data[i].productQuantity %></td>
+                                    <td><%=data[i].productPrice %></td>
+                                    <td> <a button class="btn btn-danger" href="/user/products">Cancel</a></td>
+                                    <!-- <td> <a button class="btn btn-primary" href="/user/products/confirm/<%=data[i].product_id%>">Confirm Order</a></td> -->
+                              <!--    </tr>
+                                 <%}%>
+                              </table>
+                              <hr>
+                              <hr>
+                             
+                                 <div class="control-group">
+                               
+                                   
+                                          <input type="number" name="quantity" min="1" required>
+
+                                       
+                                   <td>
+                                    <button input type="submit" class="btn btn-primary">Add to Cart</button>
+                                 </td>
+                              </form>
+                              
+                           </div>
+                        </div>
+                        </div>
+                        </div>
+                     </body>
+                     <link rel="stylesheet"
+                        href="https://maxcdn.bootstrapcdn.com/bootstrap/2.3.2/css/bootstrap.min.css">
+                     <link rel="stylesheet"
+                        href="https://maxcdn.bootstrapcdn.com/bootstrap/2.3.2/css/bootstrap-theme.min.css">
+                     <script
+                        src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+                     <script
+                        src="https://maxcdn.bootstrapcdn.com/bootstrap/2.3.2/js/bootstrap.min.js"></script>
+                  </html> --> 
+
+
+
+
+
+
+
+                  <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>Single Product </title>
+    <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/bootstrap/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/bootstrap/css/prettyPhoto.css" rel="stylesheet">
+    <link href="/bootstrap/css/price-range.css" rel="stylesheet">
+    <link href="/bootstrap/css/animate.css" rel="stylesheet">
+  <link href="/bootstrap/css/main.css" rel="stylesheet">
+  <link href="/bootstrap/css/responsive.css" rel="stylesheet">
+    <!--[if lt IE 9]>
+    <script src="js/html5shiv.js"></script>
+    <script src="js/respond.min.js"></script>
+    <![endif]-->       
+    <link rel="shortcut icon" href="images/ico/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+</head><!--/head-->
+
+<body>
+  <header id="header"><!--header-->
+    <div class="header_top"><!--header_top-->
+      <div class="container">
+
+          <div class="col-sm-6">
+            <div class="social-icons pull-right">
+              
+            </div>
+          </div>
+        </div>
+      </div>
+    </div><!--/header_top-->
+    
+    <div class="header-middle"><!--header-middle-->
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="logo pull-left">
+              <a href="#"><img src="/images/logo.png" alt="" /></a>
+            </div>
+            <div class="btn-group pull-right">
+              <div class="btn-group">
+
+              </div>
+              
+              <div class="btn-group">
+                
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-8">
+            <div class="shop-menu pull-right">
+              <ul class="nav navbar-nav">
+                <li><a href="#"><i class="fa fa-user"></i> <%=sess.firstname%>&nbsp;<%=sess.lastname%></a></li>
+                <li><a href="/user/home"><i class="fa fa-star"></i> Home</a></li>
+                <li><a href="/user/products"><i class="fa fa-crosshairs"></i> Products</a></li>
+                <li><a href="/user/view/orders"><i class="fa fa-shopping-cart"></i> Orders</a></li>
+                <li><a href="/logout"><i class="fa fa-lock"></i> Logout</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div><!--/header-middle-->
+  
+    
+        
+        </div>
+      </div>
+    </div><!--/header-bottom-->
+  </header><!--/header-->
+  
+  <section>
+    
+        
+        <div class="col-sm-9 padding-right">
+          <!-- <div class="product-details"> --><!--product-details-->
+            <div class="col-sm-5">
+              <div class="view-product">
+<!--                 <img src="http://i0.wp.com/freekaamaal.com/wp-content/uploads/Yepme-Casual-Olive-Shoes.jpg?resize=279%2C271" alt="" />
+ -->                
+              </div>
+              
+
+            </div>
+             
+
+            
+            <div class="col-sm-7">
+              <div class="product-information"><!--/product-information-->
+                <img src="/images/new.jpg" class="newarrival" alt="" />
+
+                <%
+                                    for(var i=0;i<data.length;i++){
+                                    
+                                    %>
+                                    <%i+1 %>
+
+                 <form method="post" action="/user/a/products/confirm/<%=data[i].productID%>/<%=quantity%>/<%=data[i].productPrice%>">
+               
+                <img src="<%=data[i].image%>" alt= "<%=data[i].productName%>"width=50% height=50% alt=""/>
+                <span>
+                  <span>US $ <b> <%=total %></span>     
+                                    
+                    <button input type="submit" class="btn btn-primary">Confirm & Pay</button>
+                </span>
+                <h2><p><%=data[i].productName %></p></h2>
+                <p>Quantity Selected : <b> <%= quantity %></p> 
+                <p><b>Product Quantity : <%=data[i].productQuantity %></b> In Stock</p>
+              
+                
+              </div><!--/product-information-->
+<!--             </div>
+ -->          </div><!--/product-details-->
+                                           <%}%>
+
+          </form>
+          <div class="category-tab shop-details-tab"><!--category-tab-->
+            
+            
+              
+              <div class="tab-pane fade active in" id="reviews" >
+                <div class="col-sm-12">
+                  
+                  
+
+          
+          
+  
+
+  
+    <script src="/bootstrap/js/jquery.js"></script>
+  <script src="/bootstrap/js/price-range.js"></script>
+    <script src="/bootstrap/js/jquery.scrollUp.min.js"></script>
+  <script src="/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/bootstrap/js/jquery.prettyPhoto.js"></script>
+    <script src="/bootstrap/js/main.js"></script>
+</body>
+</html>
