--- a/views/userOrderStatus.ejs
+++ b/views/userOrderStatus.ejs
@@ -1,98 +1,130 @@
-                <!DOCTYPE html>
-                <html>
+<!DOCTYPE html>
+<html>
 
-                <head>
-                    <title>Orders List</title>
-                    <link href="/../style.css" rel="stylesheet">
-                    <script src="/../js/all.js" type="text/javascript"></script>
+<head>
+    <title>Orders List</title>
+    <link href="/../style.css" rel="stylesheet">
+    <script src="/../js/all.js" type="text/javascript"></script>
+            <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+            <link href="/bootstrap/css/font-awesome.min.css" rel="stylesheet">
+            <link href="/bootstrap/css/prettyPhoto.css" rel="stylesheet">
+            <link href="/bootstrap/css/price-range.css" rel="stylesheet">
+            <link href="/bootstrap/css/animate.css" rel="stylesheet">
+            <link href="/bootstrap/css/main.css" rel="stylesheet">
+            <link href="/bootstrap/css/responsive.css" rel="stylesheet">
 
-                </head>
+</head>
 
-                <body>
-                    <h2 align="center">Order list of user of complete products</h2>
+<body>
+ <header id="header"><!--header-->
+    <div class="header_top"><!--header_top-->
+      <div class="container">
+
+          <div class="col-sm-6">
+            <div class="social-icons pull-right">
+              
+            </div>
+          </div>
+        </div>
+      </div>
+    </div><!--/header_top-->
+    
+    <div class="header-middle"><!--header-middle-->
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="logo pull-left">
+              <a href="#"><img src="/images/logo.png" alt="" /></a>
+            </div>
+            <div class="btn-group pull-right">
+              <div class="btn-group">
+
+              </div>
+              
+              <div class="btn-group">
+                
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-8">
+            <div class="shop-menu pull-right">
+              <ul class="nav navbar-nav">
+                <li><a href="#"><i class="fa fa-user"></i> <%=sess.firstname%>&nbsp;<%=sess.lastname%></a></li>
+                <li><a href="/user/home"><i class="fa fa-star"></i> Home</a></li>
+                <li><a href="/user/products"><i class="fa fa-crosshairs"></i> Products</a></li>
+                <li><a href="/user/view/orders"><i class="fa fa-shopping-cart"></i> Orders</a></li>
 
 
-                    <span class="login"><h4>Welcome: </h4><strong><h1><%=sess.firstname%>&nbsp;<%=sess.lastname%></h1><strong></span>
 
-                    <div class="page-container">
-                        <div class="page-data">
-                            <div class="data-btn"></div>
+                <li><a href="/logout"><i class="fa fa-lock"></i> Logout</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div><!--/header-middle-->
+  
+    
+        
+        </div>
+      </div>
+    </div><!--/header-bottom-->
+  </header>
+               
+                <% for(var i=0;i<data.length;i++) { %>
+                <div class="offset4 span6">
+                    <div class="product-image-wrapper">
+                        <div class="single-products">
+                            <div class="productinfo text-center">
+                                <h2>&nbsp;</h2>
+                                <p>Product Id: <%= data[i].productID %></p>
+                                <p>Quzntity: <%= data[i].quantity %></p>
+                                <p>Total: <%= data[i].total %></p>
 
-                            <div class="data-table" align="center">
-                                <a button class="btn btn-primary" href="/user/home">Home</a><span>
-                                <a button class = "btn btn-warning" href="/user/products"> View Products</a><span>
-                                <a button class = "btn btn-info" href="/user/view/orders">View Orders</a><span>
-                                
-                               <!-- <a button class = "btn btn-success"  href="/orders/add">Add Orders</a><span>-->
-                                
-                                    <hr>
-                                    
-                                    <ul>
-                                    <li>
-                                    <a href="/logout" role="button" class=""> Logout</a>
-                                    </li>
-                                   </ul>
-                                
-                                <table border="1" cellpadding="17" cellspacing="7" aLIGN="center">
-                                    <tr>
-                                        <th width="50px">No</th>
-
-                                        <th>User Name</th>
-
-                                        <th>Prouct id</th>
-                                        <th>Order Quantity</th>
-                                        <th>Total Price</th>
-                                        <th>Delivery Status</th>
-                <!--                         <th>Edit</th>-->
-                                      <!--   <th>Cancel / Order Again</th> -->
-                                    </tr><%for(var i=0;i<data.length;i++){ %>
-
-                                    <tr>
-                                        <td width="50px"><%=i+1 %></td>
-
-                                        <td><%=data[i].username %></td>
-                                        
-                                        <td><%=data[i].productID %></td>
-
-                                        <td><%=data[i].quantity %></td>
-                                        
-                                        <td><%=data[i].total %></td>
-                                        
-
-                                       <!--  <td><a button class="btn btn-primary" href="/orders/edit/<%=data[i].order_id%>">Edit</a></td> -->
-                                            <% if(data[i].isDelivered == 1 && data[i].isCancelled == 0 ){%>
-                                            
-                                        <td><a button class="btn btn-danger" href="#">Delivered</td>
-                                        
-                                        <% }if(data[i].isDelivered == 0 && data[i].isCancelled == 0){
-                                        %>
-                                     <td><a button class="btn btn-default" href="#">Order Under Process</td>
-                                        
-                                        <% }
-                                        %>
-
-                                        <% if(data[i].isDelivered == 0 && data[i].isCancelled == 1){
-                                        %>
-                                     <td><a button class="btn btn-danger" href="#">Order Cancelled</td>
-                                        
-                                        <% }
-                                        %>
-                                        
-                                    </tr><%}%>
-
-                                </table>
+                                <% if(data[i].isDelivered == 1 && data[i].isCancelled == 0 ) { %>
+                                <a href="#" class="btn btn-success"><i class="fa fa-shopping-cart"></i>Delivered</a>
+                                <% }
+                                if(data[i].isDelivered == 0 && data[i].isCancelled == 0) { %>
+                                <a href="#" class="btn btn-info"><i class="fa fa-shopping-cart"></i>Order Under Process</a>
+                                <% }
+                                if(data[i].isDelivered == 0 && data[i].isCancelled == 1) { %>
+                                <a href="#" class="btn btn-danger"><i class="fa fa-shopping-cart"></i>Order Cancelled</a>
+                                <% } %>
                             </div>
+                           <!--  <div class="product-overlay">
+                                <div class="overlay-content">
+                                    <h2>&nbsp;</h2>
+                                    <p>Product Id: <%= data[i].productID %></p>
+                                    <p>Quzntity: <%= data[i].quantity %></p>
+                                    <p>Total: <%= data[i].total %></p>
+
+                                    <% if(data[i].isDelivered == 1 && data[i].isCancelled == 0 ) { %>
+                                    <a href="#" class="btn btn-success"><i class="fa fa-shopping-cart"></i>Delivered</a>
+                                    <% }
+                                    if(data[i].isDelivered == 0 && data[i].isCancelled == 0) { %>
+                                    <a href="#" class="btn btn-info"><i class="fa fa-shopping-cart"></i>Order Under Process</a>
+                                    <% }
+                                    if(data[i].isDelivered == 0 && data[i].isCancelled == 1) { %>
+                                    <a href="#" class="btn btn-danger"><i class="fa fa-shopping-cart"></i>Order Cancelled</a>
+                                    <% } %>
+                                </div>
+                            </div> -->
                         </div>
                     </div>
-                </body>
+                </div>
+                <% } %>
+            </div>
+        </div>
+    </div>
+</body>
 
-                <link rel="stylesheet"
-                    href="https://maxcdn.bootstrapcdn.com/bootstrap/2.3.2/css/bootstrap.min.css">
-                <link rel="stylesheet"
-                    href="https://maxcdn.bootstrapcdn.com/bootstrap/2.3.2/css/bootstrap-theme.min.css">
-                <script
-                    src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-                <script
-                    src="https://maxcdn.bootstrapcdn.com/bootstrap/2.3.2/js/bootstrap.min.js"></script>
+<link rel="stylesheet"
+href="https://maxcdn.bootstrapcdn.com/bootstrap/2.3.2/css/bootstrap.min.css">
+<link rel="stylesheet"
+href="https://maxcdn.bootstrapcdn.com/bootstrap/2.3.2/css/bootstrap-theme.min.css">
+<script
+src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script
+src="https://maxcdn.bootstrapcdn.com/bootstrap/2.3.2/js/bootstrap.min.js"></script>
 
-                </html>
+</html>
