--- a/views/userViewProducts.ejs
+++ b/views/userViewProducts.ejs
@@ -1,88 +1,106 @@
-                    <!DOCTYPE html>
-                    <html>
+<!DOCTYPE html>
+    <html>
+        <head>
+            <title>Products</title>
+            <link href="/../style.css" rel="stylesheet">
+            <script src="/../js/all.js" type="text/javascript"></script>
+            <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+            <link href="/bootstrap/css/font-awesome.min.css" rel="stylesheet">
+            <link href="/bootstrap/css/prettyPhoto.css" rel="stylesheet">
+            <link href="/bootstrap/css/price-range.css" rel="stylesheet">
+            <link href="/bootstrap/css/animate.css" rel="stylesheet">
+            <link href="/bootstrap/css/main.css" rel="stylesheet">
+            <link href="/bootstrap/css/responsive.css" rel="stylesheet">
+        </head>
+        <body>
+ <header id="header"><!--header-->
+    <div class="header_top"><!--header_top-->
+      <div class="container">
 
-                    <head>
-                        <title>Products</title>
-                        <link href="/../style.css" rel="stylesheet">
-                        <script src="/../js/all.js" type="text/javascript"></script>
-                    </head>
+          <div class="col-sm-6">
+            <div class="social-icons pull-right">
+              
+            </div>
+          </div>
+        </div>
+      </div>
+    </div><!--/header_top-->
+    
+    <div class="header-middle"><!--header-middle-->
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="logo pull-left">
+              <a href="#"><img src="/images/logo.png" alt="" /></a>
+            </div>
+            <div class="btn-group pull-right">
+              <div class="btn-group">
 
-                    <body>
-                        <h2 align="center">View Products</h2>
-
-
-                        <span class="login"><h4>Welcome To view Products:  </h4><strong><h1><%=sess.firstname%>&nbsp;<%=sess.lastname%></h1><strong></span>
-
-
-                        <div class="page-container">
-                            <div class="page-data" align="center">
-                                <div class="data-btn" align="center"></div>
-                                <a button class="btn btn-primary" href="/user/home">Home</a><span>
-                                    
-                                    <a button class = "btn btn-warning" href="/user/products">View Products</a><span>
-                                    <a button class = "btn btn-info" href="/user/view/orders">View Orders</a><span>
-                                                    
-                                    
-                                        
-                                       
-                                      <hr>
-
-                    <ul>
-                                        <li>
-                                        <a href="/logout" role="button" class=""> Logout</a>
-                                        </li>
-                                       </ul>
-                                        <table border="1" cellpadding="17" cellspacing="7" align="center">
-                                            <tr>
-                                                <th width="50px">No</th>
-
-                                                <th>Name</th>
-                                                <th>Image</th>
-                                                <th>Quantity Available</th>
-                                                
-                                                <th>Price </th>
-                                                <th> Select</th>
-                                             
-                                            </tr>
-                                            <%
-                                            for(var i=0;i<data.length;i++){
-
-                                            %>
-                                            <tr>
-                                              <td width="50px"> <%=i+1 %></td>
-
-                                                <td><%=data[i].productName %></td>
-
-                                       
-                                         <td>  <img src="<%=data[i].image%>" alt= "<%=data[i].productName%>" width="350", height="50"/></td>
+              </div>
+              
+              <div class="btn-group">
+                
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-8">
+            <div class="shop-menu pull-right">
+              <ul class="nav navbar-nav">
+                <li><a href="#"><i class="fa fa-user"></i> <%=sess.firstname%>&nbsp;<%=sess.lastname%></a></li>
+                <li><a href="/user/home"><i class="fa fa-star"></i> Home</a></li>
+                <li><a href="/user/products"><i class="fa fa-crosshairs"></i> Products</a></li>
+                <li><a href="/user/view/orders"><i class="fa fa-shopping-cart"></i> Orders</a></li>
 
 
-                                                <td><%=data[i].productQuantity %></td>
 
-                                                <td><%=data[i].productPrice %></td>
+                <li><a href="/logout"><i class="fa fa-lock"></i> Logout</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div><!--/header-middle-->
+  
+    
+        
+        </div>
+      </div>
+    </div><!--/header-bottom-->
+  </header>
 
-                                                                                
-                                               <td> <a button class="btn btn-primary" href="/user/add/<%=data[i].productID%>">Select</a></td>
-                                               
-                                               
-                                                
-                                            </tr> <%}%>
-                                        </table>
+                        <%for(var i=0;i<data.length;i++){%>
+                            <div class="col-sm-4">
+                                <div class="product-image-wrapper">
+                                    <div class="single-products">
+                                        <div class="productinfo text-center">
+                                            <img src="<%=data[i].image%>" alt="<%=data[i].productName%>" />
+                                            <h2>$ <%=data[i].productPrice %></h2>
+                                            <p><%=data[i].productName %></p>
+                                            <p><%=data[i].productQuantity %></p>
+                                            <a href="/user/add/<%=data[i].productID%>" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Select</a>
+                                        </div>
+                                        <div class="product-overlay">
+                                            <div class="overlay-content">
+                                                <h2>$ <%=data[i].productPrice %></h2>
+                                                <p><%=data[i].productName %></p>
+                                                <p><%=data[i].productQuantity %></p>
+                                                <a href="/user/add/<%=data[i].productID%>" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Select</a>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
+                        <% } %>
+                        
                         </div>
-                    </body>
+                    </div>
+                </div>
+            </div>
+        </body>
 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/2.3.2/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/2.3.2/css/bootstrap-theme.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/2.3.2/js/bootstrap.min.js"></script>
 
-                    <link rel="stylesheet"
-                        href="https://maxcdn.bootstrapcdn.com/bootstrap/2.3.2/css/bootstrap.min.css">
-                    <link rel="stylesheet"
-                        href="https://maxcdn.bootstrapcdn.com/bootstrap/2.3.2/css/bootstrap-theme.min.css">
-                    <script
-                        src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-                    <script
-                        src="https://maxcdn.bootstrapcdn.com/bootstrap/2.3.2/js/bootstrap.min.js"></script>
-
-
-                    </html>
+</html>
