--- a/views/view_products.ejs
+++ b/views/view_products.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 
 <head>
@@ -84,6 +84,175 @@
                             
                         </tr> <%}%>
                     </table>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</body>
+
+
+<link rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/2.3.2/css/bootstrap.min.css">
+<link rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/2.3.2/css/bootstrap-theme.min.css">
+<script
+    src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script
+    src="https://maxcdn.bootstrapcdn.com/bootstrap/2.3.2/js/bootstrap.min.js"></script>
+
+
+</html> -->
+
+
+
+
+
+
+
+
+
+
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Products</title>
+    <link href="/../style.css" rel="stylesheet">
+    <script src="/../js/all.js" type="text/javascript"></script>
+    <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/bootstrap/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/bootstrap/css/prettyPhoto.css" rel="stylesheet">
+    <link href="/bootstrap/css/price-range.css" rel="stylesheet">
+    <link href="/bootstrap/css/animate.css" rel="stylesheet">
+    <link href="/bootstrap/css/main.css" rel="stylesheet">
+    <link href="/bootstrap/css/responsive.css" rel="stylesheet">
+</head>
+
+<body>
+    <!-- <h2 align="center">View Products</h2>
+
+
+    <span class="login"><h4>Welcome: </h4><strong><h1><%=sess.firstname%>&nbsp;<%=sess.lastname%></h1><strong></span>
+
+-->
+    <div class="page-container">
+        <div class="page-data" align="center">
+            <div class="data-btn" align="center"></div>
+          <!--   <a button class="btn btn-primary" href="/home">Home</a><span>
+                
+                <a button class = "btn btn-warning" href="/products">View Products</a><span>
+                <a button class = "btn btn-info" href="/orders">View Orders</a><span>
+                                
+                
+                    
+                    <a button class = "btn btn-success"  href="/products/add">Add Products</a><span>
+                  <hr>
+
+
+
+
+<ul>
+                    <li>
+                    <a href="/logout" role="button" class=""> Logout</a>
+                    </li>
+                   </ul>
+ -->
+
+
+ <header id="header"><!--header-->
+    <div class="header_top"><!--header_top-->
+      <div class="container">
+
+          <div class="col-sm-6">
+            <div class="social-icons pull-right">
+              
+            </div>
+          </div>
+        </div>
+      </div>
+    </div><!--/header_top-->
+    
+    <div class="header-middle"><!--header-middle-->
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="logo pull-left">
+              <a href="#"><img src="/images/logo.png" alt="" /></a>
+            </div>
+            <div class="btn-group pull-right">
+              <div class="btn-group">
+
+              </div>
+              
+              <div class="btn-group">
+                
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-8">
+            <div class="shop-menu pull-right">
+              <ul class="nav navbar-nav">
+                <li><a href="#"><i class="fa fa-user"></i> <%=sess.firstname%>&nbsp;<%=sess.lastname%></a></li>
+                <li><a href="/home"><i class="fa fa-star"></i> Home</a></li>
+                <li><a href="/products"><i class="fa fa-crosshairs"></i> Products</a></li>
+                <li><a href="/orders"><i class="fa fa-shopping-cart"></i> Orders</a></li>
+
+
+                <li><a href="/products/add"><i class="fa fa-shopping-cart1"></i> Add Products</a></li>
+
+                <li><a href="/logout"><i class="fa fa-lock"></i> Logout</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div><!--/header-middle-->
+  
+    
+        
+        </div>
+      </div>
+    </div><!--/header-bottom-->
+  </header>
+
+
+                   <form method="get" action="/search">
+                            <form>
+                                <input type="text" name="productName" placeholder="Search..." required>
+                                <input type="button" value="Search">
+</form>
+
+
+                                                </form>
+
+
+                <% for(var i=0;i<data.length;i++) { %>
+                    <div class="col-sm-4">
+                        <div class="product-image-wrapper">
+                            <div class="single-products">
+                                <div class="productinfo text-center">
+                                    <img src="<%=data[i].image%>" alt="<%=data[i].productName%>" />
+                                    <h2>US $ <b><%=data[i].productPrice %></h2>
+                                    <p><%=data[i].productName %></p>
+                                    <p><%=data[i].productQuantity %></p>
+                                    <a href="/products/edit/<%=data[i].productID%>" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Edit</a>
+                                    <a href="/deleteProducts/<%=data[i].productID%>" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Delete</a>
+                                </div>
+                                <div class="product-overlay">
+                                    <div class="overlay-content">
+                                        <h2>US $ <b><%=data[i].productPrice %></h2>
+                                        <p>Product Name :<%=data[i].productName %></p>
+                                        <p>product Quantity : <%=data[i].productQuantity %></p>
+                                        <a href="/products/edit/<%=data[i].productID%>" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Edit</a>
+                                        <a href="/deleteProducts/<%=data[i].productID%>" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Delete</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                <% } %>
+
                 </div>
 
             </div>
